// Copyright 2024 Outernet Council Foundation
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// (-- api-linter: core::0127::http-annotation=disabled
//     aip.dev/not-precedent: The API is not yet intended to be used directly by REST services, so we don't provide a direct mapping. --)

// TODO: Rules that require extensive changes but should probably be fixed
// (-- api-linter: core::0192::has-comments=disabled
//     aip.dev/not-precedent: We need to do this because reasons. --)

// TODO: List rules should be paginated
// (-- api-linter: core::0158::response-next-page-token-field=disabled
//     aip.dev/not-precedent: We need to do this because reasons. --)
// (-- api-linter: core::0158::request-page-size-field=disabled
//     aip.dev/not-precedent: We need to do this because reasons. --)
// (-- api-linter: core::0158::request-page-token-field=disabled
//     aip.dev/not-precedent: We need to do this because reasons. --)

// TODO Missing methods
// (-- api-linter: core::0121::resource-must-support-list=disabled
//     aip.dev/not-precedent: We need to do this because reasons. --)
// (-- api-linter: core::0121::resource-must-support-get=disabled
//     aip.dev/not-precedent: We need to do this because reasons. --)

// TODO: Missing optional, required, etc.
// (-- api-linter: core::0203::field-behavior-required=disabled
//     aip.dev/not-precedent: We need to do this because reasons. --)

syntax = "proto3";

package outernet.federation.interconnect.v1alpha;

import "google/protobuf/empty.proto";
import "google/type/interval.proto";
import "google/api/field_behavior.proto";
import "google/api/client.proto";
import "google/api/resource.proto";
import "nmts/v1alpha/proto/ek/physical/antenna.proto";
import "nmts/v1alpha/proto/ek/physical/modem.proto";
import "nmts/v1alpha/proto/ek/physical/platform.proto";
import "nmts/v1alpha/proto/ek/physical/signal_processing_chain.proto";
import "nmts/v1alpha/proto/ek/physical/transceiver.proto";
import "nmts/v1alpha/proto/types/geophys/motion.proto";

option go_package = "github.com/outernetcouncil/federation/gen/go/federation/interconnect/v1alpha;interconnectpb";
option java_outer_classname = "InterconnectProto";
option java_multiple_files = true;
option java_package = "com.github.outernet.federation.interconnect.v1alpha";

// Interconnect API
//
// The Interconnect API is intended to enable a network orchestrator to use
// connectivity services from multiple service providers without integrating
// with each service provider separately. In particular, the API is intended to
// facilitate use of connectivity services that require the customer to
// establish a single wireless link with the service provider’s network, through
// which connectivity is available. This wireless link could be a link to an
// optical terminal on a low-Earth-orbiting satellite, or it could be a link to
// a ground station, among other possibilities.
service InterconnectService {
  // Lists the types of transceivers with which the connectivity service
  // provider's network is compatible. This enables the client to provide the
  // service provider with the details of only the transceivers that might
  // feasibly be capable of connecting to the service provider's network.
  rpc ListCompatibleTransceiverTypes(ListCompatibleTransceiverTypesRequest)
    returns (ListCompatibleTransceiverTypesResponse) {}

  // Gets the definition of a client-operated wireless transceiver.
  rpc GetTransceiver(GetTransceiverRequest)
    returns (Transceiver) {
      option (google.api.method_signature) = "name";
    }

  // Creates a transceiver resource representing a client-operated wireless
  // transceiver. Creation of the transceiver allows the connectivity service
  // provider to begin creating the transceiver's contact windows. Each contact
  // window represents a period of feasible communication between the
  // client-operated transceiver and transceivers in the service provider's
  // network.
  rpc CreateTransceiver(CreateTransceiverRequest)
    returns (Transceiver) {
      option (google.api.method_signature) = "transceiver,transceiver_id";
    }

  // Updates a transceiver. May be used to update a transceiver's predicted
  // trajectory, for example. The full transceiver data must always be submitted.
  // (-- api-linter: core::0134::method-signature=disabled
  //     aip.dev/not-precedent: We require the full data every time. --)
  rpc UpdateTransceiver(UpdateTransceiverRequest)
    returns (Transceiver) {
      option (google.api.method_signature) = "transceiver";
    }

  // Deletes a transceiver.
  rpc DeleteTransceiver(DeleteTransceiverRequest)
    returns (google.protobuf.Empty) {
      option (google.api.method_signature) = "name";
    }

  // Lists all available contact windows between client-operated transceivers
  // and those in the connectivity service provider's network.
  rpc ListContactWindows(ListContactWindowsRequest)
    returns (ListContactWindowsResponse) {}

  // Lists bearers.
  rpc ListBearers(ListBearersRequest)
    returns (ListBearersResponse) {}

  // Creates a bearer.
  rpc CreateBearer(CreateBearerRequest)
    returns (Bearer) {
      option (google.api.method_signature) = "bearer,bearer_id";
    }

  // Deletes a bearer.
  rpc DeleteBearer(DeleteBearerRequest)
    returns (google.protobuf.Empty) {
      option (google.api.method_signature) = "name";
    }

  // Lists attachment circuits.
  rpc ListAttachmentCircuits(ListAttachmentCircuitsRequest)
    returns (ListAttachmentCircuitsResponse) {}

  // Creates an attachment circuit.
  rpc CreateAttachmentCircuit(CreateAttachmentCircuitRequest)
    returns (AttachmentCircuit) {
      option (google.api.method_signature) = "attachment_circuit,attachment_circuit_id";
    }

  // Deletes an attachment circuit.
  rpc DeleteAttachmentCircuit(DeleteAttachmentCircuitRequest)
    returns (google.protobuf.Empty) {
      option (google.api.method_signature) = "name";
    }

  // Gets attributes of a target that are required for interconnection, such
  // as the target's motion.
  rpc GetTarget(GetTargetRequest)
    returns (Target) {
      option (google.api.method_signature) = "name";
    }

  // Lists all targets. This may not list all target assets in the service
  // provider's network. It may only return those targets referenced in contact
  // windows visible to the client.
  rpc ListTargets(ListTargetsRequest)
    returns (ListTargetsResponse) {}
}

// Defines a class of transceivers that are compatible with the connectivity
// provider's services.
message CompatibleTransceiverType {
  // A string specifying a filter over transceiver resources. Any transceiver
  // matching the filter may be considered compatible with services offered by
  // the service provider.
  //
  // The filter syntax is derived from https://google.aip.dev/160, but
  // extended to explicitly support matching of ranges in repeated fields.
  // For example, a filter for transceivers capable of transmitting in the X
  // band (8.0 – 12.0 GHz) could be represented by the expression
  //
  // transmit_signal_chain.transmitter.signals.signal.center_frequency_hz:\
  // (>= 8000000000 AND <= 12000000000)
  string transceiver_filter = 1;
}

// Defines the class of transceivers containing all information about a client's transceiver
// necessary to calculate compatibility and connectivity to provider's services.
message Transceiver {
  option (google.api.resource) = {
    type: "interconnect.outernetcouncil.org/Transceiver"
    pattern: "transceivers/{transceiver}"
    singular: "transceiver"
    plural: "transceivers"
  };

  string name = 1 [(google.api.field_behavior) = IDENTIFIER];
  ReceiveSignalChain receive_signal_chain = 2;
  TransmitSignalChain transmit_signal_chain = 3;
}

message ReceiveSignalChain {
  nmts.v1alpha.ek.physical.Demodulator demodulator = 1;
  repeated nmts.v1alpha.ek.physical.SignalProcessingChain
    signal_processing_chains = 2;
  nmts.v1alpha.ek.physical.Receiver receiver = 3;
  nmts.v1alpha.ek.physical.Platform platform = 4;
  nmts.v1alpha.ek.physical.Antenna antenna = 5;
}

message TransmitSignalChain {
  nmts.v1alpha.ek.physical.Modulator modulator = 1;
  repeated nmts.v1alpha.ek.physical.SignalProcessingChain
    signal_processing_chains = 2;
  nmts.v1alpha.ek.physical.Transmitter transmitter = 3;
  nmts.v1alpha.ek.physical.Platform platform = 4;
  nmts.v1alpha.ek.physical.Antenna antenna = 5;
}

// An interval over which a client transceiver could feasibly connect to the
// service provider's network and utilize connectivity services.
message ContactWindow {
  option (google.api.resource) = {
    type: "interconnect.outernetcouncil.org/ContactWindow"
    pattern: "contactWindows/{contact_window}"
    singular: "contactWindow"
    plural: "contactWindows"
  };
  
  string name = 1 [(google.api.field_behavior) = IDENTIFIER];

  google.type.Interval interval = 2;
  string transceiver = 3;
  string target = 4;
  int64 min_rx_center_frequency_hz = 5;
  int64 max_rx_center_frequency_hz = 6;
  int64 min_rx_bandwidth_hz = 7;
  int64 max_rx_bandwidth_hz = 8;
  int64 min_tx_center_frequency_hz = 9;
  int64 max_tx_center_frequency_hz = 10;
  int64 min_tx_bandwidth_hz = 11;
  int64 max_tx_bandwidth_hz = 12;
}

// A bearer is the required underlying connection for the provisioning of an
// attachment circuit.
message Bearer {
  option (google.api.resource) = {
    type: "interconnect.outernetcouncil.org/Bearer"
    pattern: "bearers/{bearer}"
    singular: "bearer"
    plural: "bearers"
  };

  // TODO: Major change: Bearer did not have a name, although DeleteBearerRequest refers to it.
  string name = 1 [(google.api.field_behavior) = IDENTIFIER];
  
  google.type.Interval interval = 2;

  // The client's transceiver.
  string transceiver = 3 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference).type = "AttachmentCircuit"
  ];

  string target = 4 [
    (google.api.field_behavior) = REQUIRED
  ];

  int64 rx_center_frequency_hz = 5 [
    (google.api.field_behavior) = REQUIRED
  ];
  int64 rx_bandwidth_hz = 6 [
    (google.api.field_behavior) = REQUIRED
  ];
  int64 tx_center_frequency_hz = 7 [
    (google.api.field_behavior) = REQUIRED
  ];
  int64 tx_bandwidth_hz = 8 [
    (google.api.field_behavior) = REQUIRED
  ];

  Mac mac = 9;
}

// An attachment circuit is a means of attaching to a router.
// Per Section 1.2 of RFC4364, it may be the sort of connection that is usually
// thought of as a "data link", or it may be a tunnel of some sort; what matters
// is that it be possible for two devices to be network layer peers over the
// attachment circuit.
message AttachmentCircuit {
  option (google.api.resource) = {
    type: "interconnect.outernetcouncil.org/AttachmentCircuit"
    pattern: "attachmentCircuits/{attachment_circuit}"
    singular: "attachmentCircuit"
    plural: "attachmentCircuits"
  };
  
  // TODO: Major change: Bearer did not have a name, although it is referred to.
  string name = 1 [(google.api.field_behavior) = IDENTIFIER];

  message L2Connection {
    message Encapsulation {
      message Dot1Q {
        int32 cvlan_id = 1;
      }
      oneof type {
        google.protobuf.Empty ethernet = 1;
        Dot1Q dot1q = 2;
      }
    }

    message L2Service {
      message L2TunnelService {
        message Pseudowire {
          // Far end IP address.
          string far_end = 1;
        }

        oneof type {
          Pseudowire pseudowire = 1;
        }
      }
      oneof type {
        L2TunnelService l2_tunnel_service = 1;
      }
    }

    Encapsulation encapsulation = 1;
    L2Service l2_service = 2;
  }

  message IpConnection {
    message AllocationType {
      message Static {
        repeated string client_addresses = 1;
      }

      oneof type {
        google.protobuf.Empty dynamic = 1;
        Static static_type = 2;
      }
    }

    string provider_address = 1;
    int32 prefix_length = 2;

    // Specifies the IP address allocation service provided to the client's
    // network by the service provider's network.
    AllocationType allocation_type = 3;
  }

  message RoutingProtocol {
    message Static {
      message Prefix {
        // The destination prefix of the route.
        //
        // An IP or IPv6 address optionally followed by a slash and the prefix
        // length.
        string prefix = 1;

        // The next hop to be used for the static route.
        //
        // An IP or IPv6 address.
        string next_hop = 2;
      }
      repeated Prefix prefixes = 1;
    }

    oneof type {
      Static static_type = 1;
      google.protobuf.Empty direct = 3;
    }
  }


  google.type.Interval interval = 2;
  L2Connection l2_connection = 3;
  IpConnection ip_connection = 4;
  repeated RoutingProtocol routing_protocols = 5;
}

// The attributes of a target that are required for interconnection, such as the
// target's motion.
message Target {
  option (google.api.resource) = {
    type: "interconnect.outernetcouncil.org/Target"
    pattern: "targets/{target}"
    singular: "target"
    plural: "targets"
  };
  
  string name = 1 [(google.api.field_behavior) = IDENTIFIER];

  nmts.v1alpha.types.geophys.Motion motion = 2;
}

// (-- api-linter: core::0132::request-parent-required=disabled
//     aip.dev/not-precedent: AIP requires resources to be a directed, acyclic graph with one origin, but we have a flat hierarchy, so parents don't exist today. --)
message ListCompatibleTransceiverTypesRequest {
}

message ListCompatibleTransceiverTypesResponse {
  repeated CompatibleTransceiverType compatible_transceiver_types = 1;
}

message GetTransceiverRequest {
  string name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference).type = "interconnect.outernetcouncil.org/Transceiver"
  ];
}

message CreateTransceiverRequest {
  string transceiver_id = 1 [
    (google.api.field_behavior) = REQUIRED
  ];

  // The transceiver to create.
  Transceiver transceiver = 2 [
    (google.api.field_behavior) = REQUIRED
  ];
}

// (-- api-linter: core::0134::request-mask-required=disabled
//     aip.dev/not-precedent: We require the full data every time. --)
message UpdateTransceiverRequest {
  Transceiver transceiver = 1;
}

message DeleteTransceiverRequest {
  string name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference).type = "Transceiver"
  ];
}

message ListContactWindowsRequest {
  string filter = 1;
}

message ListContactWindowsResponse {
  repeated ContactWindow contact_windows = 1;
}

message ListBearersRequest {
  string filter = 1;
}

message ListBearersResponse {
  repeated Bearer bearers = 1;
}

message CreateBearerRequest {
  string bearer_id = 1 [
    (google.api.field_behavior) = REQUIRED
  ];

  Bearer bearer = 2 [
    (google.api.field_behavior) = REQUIRED
  ];
}

message DeleteBearerRequest {
  string name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference).type = "Bearer"
  ];
}

message ListAttachmentCircuitsRequest {
  string filter = 1;
}

message ListAttachmentCircuitsResponse {
  repeated AttachmentCircuit attachment_circuits = 1;
}

message CreateAttachmentCircuitRequest {
  string attachment_circuit_id = 1 [
    (google.api.field_behavior) = REQUIRED
  ];

  AttachmentCircuit attachment_circuit = 2 [
    (google.api.field_behavior) = REQUIRED
  ];
}

message DeleteAttachmentCircuitRequest {
  string name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference).type = "AttachmentCircuit"
  ];
}

message GetTargetRequest {
  string name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference).type = "interconnect.outernetcouncil.org/Target"
  ];
}

message ListTargetsRequest {
}

message ListTargetsResponse {
  repeated Target targets = 1;
}

// A MAC protocol.
enum Mac {
  MAC_UNSPECIFIED = 0;
  MAC_DVB_S2 = 1;
  MAC_ETH = 2;
}
